generated-tests/tests/snapshots/ts/test_generated_infer_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type Test<T2> = T2 extends infer U ? U : never; const value11: Test<string> = 'test';

AST:
(program
  (type_alias_declaration
    name: (type_identifier "Test")
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier "T2")
      )
    )
    value: (conditional_type
      left: (type_identifier "T2")
      right: (infer_type
        (type_identifier "U")
      )
      consequence: (type_identifier "U")
      alternative: (predefined_type "never")
    )
  )
  (lexical_declaration
    (variable_declarator
      name: (identifier "value11")
      type: (type_annotation
        (generic_type
          name: (type_identifier "Test")
          type_arguments: (type_arguments
            (predefined_type "string")
          )
        )
      )
      value: (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "Test",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 10,
            },
            definition_type: TypeDefinition,
        },
        Definition {
            name: "T2",
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 13,
            },
            definition_type: TypeDefinition,
        },
        Definition {
            name: "value11",
            position: Position {
                start_line: 1,
                start_column: 55,
                end_line: 1,
                end_column: 62,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "T2",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 19,
            },
        },
        Usage {
            name: "U",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 34,
                end_line: 1,
                end_column: 35,
            },
        },
        Usage {
            name: "U",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 38,
                end_line: 1,
                end_column: 39,
            },
        },
        Usage {
            name: "Test",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 64,
                end_line: 1,
                end_column: 68,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
