generated-tests/tests/snapshots/ts/test_generated_interface_declaration.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
interface TestInterface { prop: number; method2(): void; }

AST:
(program
  (interface_declaration
    (type_identifier)
    (interface_body
      (property_signature
        (property_identifier)
        (type_annotation
          (predefined_type)
        )
      )
      (method_signature
        (property_identifier)
        (formal_parameters)
        (type_annotation
          (predefined_type)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestInterface",
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 24,
            },
            definition_type: InterfaceDefinition,
        },
        Definition {
            name: "prop",
            position: Position {
                start_line: 1,
                start_column: 27,
                end_line: 1,
                end_column: 31,
            },
            definition_type: PropertyDefinition,
        },
        Definition {
            name: "method2",
            position: Position {
                start_line: 1,
                start_column: 41,
                end_line: 1,
                end_column: 48,
            },
            definition_type: MethodDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "prop",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 27,
                end_line: 1,
                end_column: 31,
            },
        },
        Usage {
            name: "method2",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 41,
                end_line: 1,
                end_column: 48,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
