generated-tests/tests/snapshots/ts/test_generated_intersection_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value12: { a: number } & { b: string } = { a: 42, b: 'test' };

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value12)
      (type_annotation
        (intersection_type
          (object_type
            (property_signature
              (property_identifier)
              (type_annotation
                (predefined_type)
              )
            )
          )
          (object_type
            (property_signature
              (property_identifier)
              (type_annotation
                (predefined_type)
              )
            )
          )
        )
      )
      (object
        (pair
          (property_identifier)
          (number)
        )
        (pair
          (property_identifier)
          (string
            (string_fragment)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value12",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "value12",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 7,
            end_line: 1,
            end_column: 14,
        },
        SerializableUsage {
            name: "a",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 18,
            end_line: 1,
            end_column: 19,
        },
        SerializableUsage {
            name: "b",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 34,
            end_line: 1,
            end_column: 35,
        },
        SerializableUsage {
            name: "a",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 50,
            end_line: 1,
            end_column: 51,
        },
        SerializableUsage {
            name: "b",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 57,
            end_line: 1,
            end_column: 58,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
