generated-tests/tests/snapshots/ts/test_generated_labeled_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
label: for (let i = 0; i < 10; i++) { break label; }

AST:
(program
  (labeled_statement
    label: (statement_identifier)
    body: (for_statement
      initializer: (lexical_declaration
        (variable_declarator
          name: (identifier "i")
          value: (number "0")
        )
      )
      condition: (expression_statement
        (binary_expression
          left: (identifier "i")
          right: (number "10")
        )
      )
      increment: (update_expression
        argument: (identifier "i")
      )
      body: (statement_block
        (break_statement
          label: (statement_identifier)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "i",
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 18,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "i",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 24,
                end_line: 1,
                end_column: 25,
            },
        },
        Usage {
            name: "i",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 32,
                end_line: 1,
                end_column: 33,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
