generated-tests/tests/snapshots/ts/test_generated_lexical_declaration.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const variable = source1;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier variable)
      (identifier source1)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "variable",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "source1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 18,
            end_line: 1,
            end_column: 25,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
