generated-tests/tests/snapshots/ts/test_generated_lookup_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type Obj = { key: string }; const value14: Obj['key'] = 'test';

AST:
(program
  (type_alias_declaration
    (type_identifier)
    (object_type
      (property_signature
        (property_identifier)
        (type_annotation
          (predefined_type)
        )
      )
    )
  )
  (lexical_declaration
    (variable_declarator
      (identifier value14)
      (type_annotation
        (lookup_type
          (type_identifier)
          (literal_type
            (string
              (string_fragment)
            )
          )
        )
      )
      (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "Obj",
            line_number: 1,
            definition_type: TypeDefinition,
            scope: None,
        },
        Definition {
            name: "value14",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "key",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 14,
            end_line: 1,
            end_column: 17,
        },
        SerializableUsage {
            name: "value14",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 35,
            end_line: 1,
            end_column: 42,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
