generated-tests/tests/snapshots/ts/test_generated_new_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
new TestClass2(arg)

AST:
(program
  (expression_statement
    (new_expression
      (identifier TestClass2)
      (arguments
        (identifier arg)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "TestClass2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 15,
            },
        },
        Usage {
            name: "arg",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 16,
                end_line: 1,
                end_column: 19,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
