generated-tests/tests/snapshots/ts/test_generated_non_null_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
value15!

AST:
(program
  (expression_statement
    (non_null_expression
      (identifier value15)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "value15",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 8,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
